<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ShowMovieDetails">

    <RelativeLayout
        android:id="@+id/first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/second_theme"
        android:paddingBottom="@dimen/_40sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/backButton"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_alignParentStart="true"
            android:layout_margin="@dimen/_6sdp"
            android:background="@drawable/ic_baseline_arrow_back" />


        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/_8sdp"
            android:text="@string/movies"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/btnSearch"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/_6sdp"
            android:background="@drawable/ic_baseline_open_in_browser_24" />

        <ImageView
            android:id="@+id/ivShowImage"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_170sdp"
            android:layout_below="@id/backButton"
            android:layout_margin="@dimen/_20sdp"
            android:elevation="@dimen/_10sdp" />

        <TextView
            android:id="@+id/tvShowTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTitle"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_toEndOf="@id/ivShowImage"
            android:text="title"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp" />

        <TextView
            android:id="@+id/r"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvShowTitle"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_toEndOf="@id/ivShowImage"
            android:text="Runtime-"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"

            />

        <TextView
            android:id="@+id/duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvShowTitle"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_toEndOf="@id/r"
            android:text="asadsd"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"

            />

        <TextView
            android:id="@+id/dateOfShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/r"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_toEndOf="@id/ivShowImage"
            android:text="@string/date"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"

            />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/r"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_toEndOf="@id/dateOfShow"
            android:text="asadsd"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"

            />

        <TextView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dateOfShow"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_toEndOf="@id/ivShowImage"
            android:drawableLeft="@drawable/ic_baseline_star_24"
            android:drawablePadding="@dimen/_5sdp"
            android:text="@string/_8_3"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rating"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_toEndOf="@id/ivShowImage"
            android:drawablePadding="@dimen/_5sdp"
            android:text="@string/language"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/setLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rating"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_toEndOf="@id/language"
            android:drawablePadding="@dimen/_5sdp"
            android:text="English"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first">

        <TextView
            android:id="@+id/synopsis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/synopsis"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sdp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/synopsis"
            android:layout_marginBottom="@dimen/_10sdp">

            <TextView
                android:id="@+id/tvDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/synopsis"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:justificationMode="inter_word"
                android:text="details" />

        </ScrollView>
    </RelativeLayout>

    <Button
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:background="@drawable/box"
        android:elevation="@dimen/_20sdp"
        android:paddingStart="@dimen/_20sdp"
        android:paddingEnd="@dimen/_20sdp"
        android:text="@string/book_now"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>